--- a/iamgenius/app/styles/global.css
+++ b/iamgenius/app/styles/global.css
@@ -68,5 +68,16 @@ h4,
 h5,
 h6 {
   padding-bottom: 0.5rem;
-  margin-left: -1.2rem;
+}
+
+@media (min-width: 768px) {
+  h1,
+  h2,
+  h3,
+  h4,
+  h5,
+  h6 {
+    padding-bottom: 0.5rem;
+    margin-left: -1.2rem;
+  }
 }
